Changed the way of building and making it work together (backend and frontend)

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,10 +12,18 @@
         "experimentalDecorators": true,
         "moduleResolution": "node",
         "noUnusedLocals": false, 
-	"outDir": "./dist/"
+	"outDir": "./dist/",
+	"jsx": "react",
+	"jsxFactory": "h"
+
     },
     "compileOnSave": false,
     "exclude": [
       "node_modules"
+    ],
+    "include": [
+	    "./app/**/*.tsx",
+	    "./app/**/*.ts"
     ]
+
 }
