--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,12 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "preact": "^8.5.2",
+    "preact-fluid": "^0.9.1"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^5.0.4",
+    "ts-loader": "^6.1.0"
+  }
 }
