--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.1",
+    "@types/nedb": "^1.8.9",
     "express": "^4.17.1",
     "inversify": "^5.0.1",
     "inversify-express-utils": "^6.3.2",
+    "nedb": "^1.8.0",
     "reflect-metadata": "^0.1.13"
   }
 }
