--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/history": "^4.7.3",
+    "history": "^4.10.1",
     "preact": "^8.5.2",
-    "preact-fluid": "^0.9.1"
+    "preact-fluid": "^0.9.1",
+    "preact-material-components": "^1.6.0",
+    "preact-router": "^2.6.1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.4",
-    "ts-loader": "^6.1.0"
+    "ts-loader": "^6.1.0",
+    "typings-for-css-modules-loader": "^1.7.0"
   }
 }
