--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,7 +14,9 @@
         "noUnusedLocals": false, 
 	"outDir": "./dist/",
 	"jsx": "react",
-	"jsxFactory": "h"
+	"jsxFactory": "h",
+	 "typeRoots": [ "./types", "./node_modules/@types"]
+
 
     },
     "compileOnSave": false,
