Working map, possibility of adding points by clicking and prepared for routing using server API

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,13 @@
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.1",
     "@types/nedb": "^1.8.9",
+    "@types/node-fetch": "^2.5.2",
     "express": "^4.17.1",
     "inversify": "^5.0.1",
+    "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.3.2",
     "nedb": "^1.8.0",
+    "node-fetch": "^2.6.0",
     "reflect-metadata": "^0.1.13"
   }
 }
