--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@types/history": "^4.7.3",
     "@types/leaflet": "^1.5.1",
+    "css-loader": "^3.2.0",
     "history": "^4.10.1",
     "leaflet": "^1.5.1",
     "preact": "^8.5.2",
     "preact-fluid": "^0.9.1",
     "preact-material-components": "^1.6.0",
-    "preact-router": "^2.6.1"
+    "preact-router": "^2.6.1",
+    "style-loader": "^1.0.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.4",
