--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "preact": "^8.5.2",
     "preact-material-components": "^1.6.0",
     "preact-router": "^2.6.1",
-    "style-loader": "^1.0.0"
+    "style-loader": "^1.0.0",
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.4",
