Import database to a new format

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/body-parser": "^1.17.1",
+    "@types/csv-parse": "^1.2.2",
     "@types/exif": "^0.6.0",
     "@types/express": "^4.17.1",
     "@types/nedb": "^1.8.9",
     "@types/node-fetch": "^2.5.2",
+    "csv-parse": "^4.4.7",
     "exif": "^0.6.0",
     "express": "^4.17.1",
     "inversify": "^5.0.1",
