--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,27 @@
 {
   "name": "cestopis-private-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend of administration part of the travelbook app",
   "main": "dist/app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Sukovec",
   "license": "ISC",
   "dependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/csv-parse": "^1.2.2",
-    "@types/exif": "^0.6.0",
     "@types/express": "^4.17.1",
     "@types/nedb": "^1.8.9",
     "@types/node-fetch": "^2.5.2",
     "csv-parse": "^4.4.7",
-    "exif": "^0.6.0",
     "express": "^4.17.1",
     "inversify": "^5.0.1",
     "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.3.2",
+    "moment": "^2.24.0",
     "nedb": "^1.8.0",
+    "node-exiftool": "^2.3.0",
     "node-fetch": "^2.6.0",
     "reflect-metadata": "^0.1.13"
   }
