addPhotosDb.ts script for importing newly added photos to database instead of old make-thumbs.sh

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "nedb": "^1.8.0",
     "node-exiftool": "^2.3.0",
     "node-fetch": "^2.6.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "typescript": "^3.6.3"
   }
 }
