--- a/backend/package.json
+++ b/backend/package.json
@@ -12,18 +12,23 @@
     "@types/body-parser": "^1.17.1",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.1",
+    "@types/express-session": "^1.15.14",
     "@types/nedb": "^1.8.9",
     "@types/node-fetch": "^2.5.2",
+    "@types/uuid": "^3.4.5",
     "csv-parse": "^4.4.7",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "inversify": "^5.0.1",
     "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.3.2",
     "moment": "^2.24.0",
     "nedb": "^1.8.0",
+    "nedb-session-store": "^1.1.2",
     "node-exiftool": "^2.3.0",
     "node-fetch": "^2.6.0",
     "reflect-metadata": "^0.1.13",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "uuid": "^3.3.3"
   }
 }
