--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,20 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "@types/history": "^4.7.3",
-    "@types/leaflet": "^1.5.1",
+    "@types/leaflet": "^1.5.5",
     "css-loader": "^3.2.0",
     "history": "^4.10.1",
     "leaflet": "^1.5.1",
-    "preact": "^8.5.2",
-    "preact-material-components": "^1.6.0",
-    "preact-router": "^2.6.1",
+    "preact": "^10.0.1",
+    "preact-material-components": "^1.6.1",
+    "preact-router": "^3.1.0",
     "style-loader": "^1.0.0",
-    "typescript": "^3.6.3",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.4",
-    "ts-loader": "^6.1.0",
+    "ts-loader": "^6.2.1",
     "typings-for-css-modules-loader": "^1.7.0"
   }
 }
