--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "csv-parse": "^4.6.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "fetch-cookie": "^0.7.3",
     "inversify": "^5.0.1",
     "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.3.2",
