--- a/backend/app/const/config.ts.example
+++ b/backend/app/const/config.ts.example
@@ -3,7 +3,7 @@ export default {
     rawPath: "/home/suk/backed-photo",
     serverPort: 9080,
     serverListen: "0.0.0.0",
-    exportThumbPath: "/var/www/vps.sukovec.cz/test-thumbs",
+    exportThumbPath: "/var/www/vps.sukovec.cz/thumbs",
     databasePath: "/home/suk/code/cestopis/data",
     sessionSecret: "this-is-session-secret-change-it-for-production",
     // few controller endpoints need to work just in for localhost
